Solving bootstrap issues with regard to how the site looks on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,7 +71,7 @@ h3, h2 {
 #about h1
 {
     background-color:  ;
-    text-align: left;
+    text-align: center;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     color:  #a7a9ab ;
     font-weight: 200;
@@ -470,29 +470,24 @@ ul
     font-weight: lighter;
 }
 
-.hero
+#subtitle
 {
-    background-color: ;
-    padding: 30px 0px 30px 0px;
+    margin-top: 40px; 
+    margin-bottom: 40px;
 }
 
-
-.hero-laptop
+#hero-laptop
 {
-    width: 727px;
+    width: auto;
     float: left;
-    background-color: ;
     text-align: left;
 }
 
-.hero-boxout h2
+#hero-boxout h2
 {
-    width: 380px;
     float: left;
-    padding: 10px 0px 0px 0px;
     background-color: ;
     text-align: left;
-    margin-left: 10px;
     color: #a7a9ab;
     font-weight: lighter;    
     font-size: 32px;
